    available as semi-private. [ticket:2404]

- oracle
  - [bug] Quoting information is now passed along
    from a Column with quote=True when generating
    a same-named bound parameter to the bindparam()
    object, as is the case in generated INSERT and UPDATE
    statements, so that unknown reserved names can
    be fully supported.  [ticket:2437]

- extensions
  - [removed] The SQLSoup extension is removed from
    SQLAlchemy, and is now an external project.
    See http://pypi.python.org/pypi/sqlsoup .
    [ticket:2262]

0.7.7 - 0.7.xx
==============
0.8 development begins during 0.7.7 development.
All relevant bug fixes
and features listed below from version 0.7.7 on
are also present in 0.8.

0.7.9
=====
- orm
  - [bug] Fixed bug mostly local to new
    AbstractConcreteBase helper where the "type"
    attribute from the superclass would not
    be overridden on the subclass to produce the
    "reserved for base" error message, instead placing
    a do-nothing attribute there.  This was inconsistent
    vs. using ConcreteBase as well as all the behavior
    of classical concrete mappings, where the "type"
    column from the polymorphic base would be explicitly
    disabled on subclasses, unless overridden
    explicitly.

  - [bug] A warning is emitted when lazy='dynamic'
    is combined with uselist=False.  This is an
    exception raise in 0.8.

  - [bug] Fixed bug whereby user error in related-object
    assignment could cause recursion overflow if the
    assignment triggered a backref of the same name
    as a bi-directional attribute on the incorrect
    class to the same target.  An informative
    error is raised now.

- sql
  - [bug] Fixed CTE bug whereby positional
    bound parameters present in the CTEs themselves
    would corrupt the overall ordering of
    bound parameters.  This primarily
    affected SQL Server as the platform with
    positional binds + CTE support.
    [ticket:2521]

  - [bug] Fixed more un-intuitivenesses in CTEs